--- a/gallery-weddings.html
+++ b/gallery-weddings.html
@@ -40,6 +40,7 @@
 
     <!-- Main Content -->
     <main>
+        <!-- Gallery Section -->
         <section class="gallery">
             <div class="photos">
                 <img src="assets/images/weddings/1.webp"
@@ -133,5 +134,4 @@
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
