--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
     <meta name="description"
         content="Felipe Giubilei. Photographer and Videographer, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
+    <!-- Title -->
     <title>F. Giubilei | Photographer + Videographer</title>
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -17,10 +20,12 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <img src="assets/images/logo.webp" alt="website logo" width="169" height="51">
         </a>
+        <!-- Nav Section -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -33,7 +38,9 @@
         </nav>
     </header>
 
+    <!-- Main Content -->
     <main>
+        <!-- Hero Section -->
         <section id="hero">
             <div id="cover-text">
                 <h3>Freelance Professional</h3>
@@ -41,6 +48,7 @@
                 <h2>Videographer </h2>
             </div>
         </section>
+        <!-- Polaroid Section -->
         <section id="polaroid-section">
             <div class="polaroid-container">
                 <div class="polaroid">
@@ -68,7 +76,9 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
+        <!-- Social Media -->
         <div id="social-container">
             <div>
                 <span>Check out my social media!</span>
@@ -98,6 +108,7 @@
         </div>
     </footer>
 
+    <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
 
