--- a/thank-you.html
+++ b/thank-you.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
     <meta name="description"
         content="Felipe Giubilei. Photographer and Videographer, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
-    <meta http-equiv="refresh" content="10" url="index.html">
+    <meta http-equiv="refresh" content="10; url=index.html">  
+    <!-- Title -->
     <title>F. Giubilei | Photographer + Videographer</title>
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -18,10 +21,12 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <img src="assets/images/logo.webp" alt="website logo" width="169" height="51">
         </a>
+        <!-- Nav Section -->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -35,6 +40,7 @@
     </header>
 
     <main>
+        <!-- Thank You-->
         <div class="error-404-background">
             <div class="error-404-text">
                 <h2>Thank you for contacting me!</h2>
@@ -44,7 +50,9 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer>
+        <!-- Social Media -->
         <div id="social-container">
             <div>
                 <span>Check out my social media!</span>
@@ -73,6 +81,8 @@
             </div>
         </div>
     </footer>
+
+    <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
 
