--- a/404.html
+++ b/404.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
     <meta name="description"
         content="Felipe Giubilei. Photographer and Videographer, São Paulo, Belo Horizonte, Brazil">
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
+    <!-- Title -->
     <title>F. Giubilei | Photographer + Videographer</title>
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
@@ -17,10 +20,12 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
         <a href="index.html">
             <img src="assets/images/logo.webp" alt="website logo" width="169" height="51">
         </a>
+        <!-- Nav Section-->
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
@@ -28,24 +33,28 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a class="nav-selected" href="contact.html">Get in touch!</a></li>
+                <li><a href="contact.html">Get in touch!</a></li>
             </ul>
         </nav>
     </header>
 
+    <!-- Main -->
     <main>
+        <!-- 404 -->
         <div class="error-404-background">
             <div class="error-404-text">
-                    <h1>Error 404</h1>
-                    <h2>Oops! Something went wrong!</h2>
-                    <a href="index.html"><button id="error-button" type="button">Take me home!</button></a>
-                </div>
-                </form>
+                <h1>Error 404</h1>
+                <h2>Oops! Something went wrong!</h2>
+                <a href="index.html"><button id="error-button" type="button">Take me home!</button></a>
             </div>
+            </form>
+        </div>
         </div>
     </main>
 
+    <!-- Footer -->
     <footer>
+        <!-- Social Media -->
         <div id="social-container">
             <div>
                 <span>Check out my social media!</span>
@@ -74,6 +83,8 @@
             </div>
         </div>
     </footer>
+
+    <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
 </body>
 
