--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </section>
         <!-- Polaroid Section -->
-        <section id="polaroid-section">
+        <section id="polaroid-section"><h2><h2/>
             <div class="polaroid-container">
                 <div class="polaroid">
                     <a href="about.html"><img src="assets/images/polaroid-1.webp"
