Fix w3 warnings to 404, thank-you,gallery concerts

--- a/404.html
+++ b/404.html
@@ -45,10 +45,8 @@
             <div class="error-404-text">
                 <h1>Error 404</h1>
                 <h2>Oops! Something went wrong!</h2>
-                <a href="index.html"><button id="error-button" type="button">Take me home!</button></a>
+                <a href="index.html"><div id="error-button">Take me home!</div></a>
             </div>
-            </form>
-        </div>
         </div>
     </main>
 
