--- a/gallery-concerts.html
+++ b/gallery-concerts.html
@@ -41,7 +41,7 @@
     <!-- Main Content -->
         <main>
             <!-- Gallery Section -->
-        <section class="gallery">
+        <section class="gallery"><h2></h2>
             <div class="photos">
                 <img src="assets/images/concerts/1.webp"
                     alt="Vitória, singer, commands the stage edge, bathed in purple lights, connecting with the audience intimately.">
