Fix w3 sections without h and divs vs sections

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
     <!-- Main -->
     <main>
         <!-- About Section -->
-        <section id="about-container">
+        <section id="about-container"><h6 class="hidden">Hidden</h6>
             <div id="about-background">
                 <div>
                     <img id="about-image" src="assets/images/about-img.webp"
