--- a/gallery-concerts.html
+++ b/gallery-concerts.html
@@ -40,8 +40,8 @@
 
     <!-- Main Content -->
         <main>
-            <!-- Gallery Section -->
-        <section class="gallery"><h6 class="hidden">Hidden</h6>
+            <!-- Gallery -->
+        <div class="gallery">
             <div class="photos">
                 <img src="assets/images/concerts/1.webp"
                     alt="Vitória, singer, commands the stage edge, bathed in purple lights, connecting with the audience intimately.">
@@ -102,7 +102,7 @@
                 <img src="assets/images/concerts/29.webp"
                     alt="Ionnalee graces the stage, black jumpsuit adorned with ethereal veil wings, dancing with enchanting grace and musical prowess.">
             </div>
-        </section>
+        </div>
     </main>
 
     <!-- Footer -->
