--- a/gallery-family.html
+++ b/gallery-family.html
@@ -40,8 +40,8 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Gallery Section -->
-        <section class="gallery">
+        <!-- Gallery -->
+        <div class="gallery">
             <div class="photos">
                 <img src="assets/images/family/1.webp"
                     alt="Expectant mother cradles her belly, holding a tiny cyan crochet shoe, capturing the anticipation of new life.">
@@ -72,7 +72,7 @@
                 <img src="assets/images/family/14.webp"
                     alt="Young boy sits in a blue-themed classroom, surrounded by Easter chocolates, a charming scene of childhood delight.">
             </div>
-        </section>
+        </div>
     </main>
 
      <!-- Footer -->
