--- a/gallery-i-events.html
+++ b/gallery-i-events.html
@@ -40,8 +40,8 @@
 
     <!-- Main Content -->
         <main>
-            <!-- Gallery Section -->
-            <section class="gallery">
+            <!-- Gallery -->
+            <div class="gallery">
                 <div class="photos">
                     <img src="assets/images/i-events/1.webp"
                         alt="A man's silhouette faces the lecturer in a sleek modern auditorium, captivated by the engaging presentation.">
