--- a/gallery-solo.html
+++ b/gallery-solo.html
@@ -40,9 +40,9 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Gallery Section -->
-        <section class="gallery">
-            <div class="photos">
+        <!-- Gallery -->
+        <div class="gallery">
+            <div class="photos"><h6 class="hidden">Hidden</h6>
                 <img src="assets/images/solo/1.webp"
                     alt="Relaxed man lounges in a beach chair; vibrant graffiti decorates the background, adding a splash of color to relaxation.">
                 <img src="assets/images/solo/2.webp"
@@ -92,7 +92,7 @@
                 <img src="assets/images/solo/25.webp"
                     alt="Short-haired girl in colorful attire roller skates in a cement tennis court, exuding energy and vibrancy.">
             </div>
-        </section>
+        </div>
     </main>
 
         <!-- Footer -->
