--- a/gallery-weddings.html
+++ b/gallery-weddings.html
@@ -40,8 +40,8 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Gallery Section -->
-        <section class="gallery">
+        <!-- Gallery -->
+        <div class="gallery">
             <div class="photos">
                 <img src="assets/images/weddings/1.webp"
                     alt="Intimate dance: bride and groom, enveloped by floral décor, share a moment of pure connection.">
@@ -98,7 +98,7 @@
                 <img src="assets/images/weddings/27.webp"
                     alt="A garden backdrop sets the scene for a tender kiss between the bride and groom, surrounded by natural beauty.">
             </div>
-        </section>
+        </div>
     </main>
 
     <!-- Footer -->
