--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     <!-- Main Content -->
     <main>
         <!-- Polaroid Section -->
-        <section id="polaroid-section">
+        <section id="polaroid-section"><h6 class="hidden">Hidden</h6>
             <div class="polaroid-container">
                 <div class="polaroid">
                     <a href="gallery-concerts.html"><img src="assets/images/gallery-icons/concerts.webp"
