--- a/gallery-video.html
+++ b/gallery-video.html
@@ -39,9 +39,9 @@
     </header>
 
     <!-- Main Content -->
-        <main>
-            <!-- Gallery Section -->
-        <div id="video-container">
+    <main>
+        <!-- Gallery -->
+        <div class="gallery">
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
                     title="YouTube video player"
@@ -84,39 +84,40 @@
         </div>
     </main>
 
-        <!-- Footer -->
-        <footer>
-            <!-- Social Media -->
-            <div id="social-container">
-                <div>
-                    <span>Check out my social media!</span>
-                </div>
-                <div>
-                    <ul id="social-networks">
-                        <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
-                                aria-label="visit Felipe's instagram page (opens in a new tab)"><i
-                                    class="fa-brands fa-square-instagram"></i></a></li>
-                        <li><a href="https://www.flickr.com/photos/felipegfotografia/page9" target="_blank" rel="noopener"
-                                aria-label="visit Felipe's flickr page (opens in a new tab)"><i
-                                    class="fa-brands fa-flickr"></i></a>
-                        </li>
-                        <li><a href="https://www.linkedin.com/in/felipe-giubilei-25942a233/?originalSubdomain=br"
-                                target="_blank" rel="noopener"
-                                aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
-                                    class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei"
-                                target="_blank" rel="noopener"
-                                aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
-                                    class="fa-brands fa-square-x-twitter"></i></a></li>
-                        <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
-                                aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
-                                    class="fa-brands fa-square-youtube"></i></a></li>
-                    </ul>
-                </div>
+    <!-- Footer -->
+    <footer>
+        <!-- Social Media -->
+        <div id="social-container">
+            <div>
+                <span>Check out my social media!</span>
             </div>
-        </footer>
-    
-        <!--Font Awesome Kit-->
-        <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
-    </body>
-    </html>
+            <div>
+                <ul id="social-networks">
+                    <li><a href="https://www.instagram.com/felipegiubilei/" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's instagram page (opens in a new tab)"><i
+                                class="fa-brands fa-square-instagram"></i></a></li>
+                    <li><a href="https://www.flickr.com/photos/felipegfotografia/page9" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's flickr page (opens in a new tab)"><i
+                                class="fa-brands fa-flickr"></i></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/felipe-giubilei-25942a233/?originalSubdomain=br"
+                            target="_blank" rel="noopener"
+                            aria-label="visit Felipe's LinkedIn page (opens in a new tab)"><i
+                                class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://twitter.com/i/flow/login?redirect_after_login=%2Ffelipegiubilei"
+                            target="_blank" rel="noopener"
+                            aria-label="visit Felipe's X/Twitter page (opens in a new tab)"><i
+                                class="fa-brands fa-square-x-twitter"></i></a></li>
+                    <li><a href="https://www.youtube.com/@felipegiubilei" target="_blank" rel="noopener"
+                            aria-label="visit Felipe's Youtube Channel (opens in a new tab)"><i
+                                class="fa-brands fa-square-youtube"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/73bb3e796f.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
