Fix w3 sections about.html

--- a/about.html
+++ b/about.html
@@ -40,8 +40,8 @@
 
     <!-- Main -->
     <main>
-        <!-- About Section -->
-        <section id="about-container"><h6 class="hidden">Hidden</h6>
+        <!-- About -->
+        <div id="about-container">
             <div id="about-background">
                 <div>
                     <img id="about-image" src="assets/images/about-img.webp"
@@ -82,7 +82,7 @@
                             photoshoots</strong> in his impressive portfolio.</p>
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- Partners Section -->
         <section id="partners">
