Fix w3 warnings on gallery.html

--- a/gallery-i-events.html
+++ b/gallery-i-events.html
@@ -82,7 +82,7 @@
                     <img src="assets/images/i-events/19.webp"
                         alt="Elevated view of an event space, wooden chairs facing a stage with screens displaying text on food producers and family agriculture. Balcony area to the right.">
                 </div>
-            </section>
+            </div>
         </main>
 
     <!-- Footer -->
