Update Readme: Add html w3 table, fix videos

--- a/gallery-video.html
+++ b/gallery-video.html
@@ -41,7 +41,7 @@
     <!-- Main Content -->
     <main>
         <!-- Gallery -->
-        <div class="gallery">
+        <div id="video-container">
             <div class="video-frame">
                 <iframe class="video-window" src="https://www.youtube.com/embed/zk1ShvzaXj8?si=FnvhnAOWddE0Yl8o"
                     title="YouTube video player"
