--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
     <!-- Title -->
-    <title>F. Giubilei | Photographer + Videographer</title>
+    <title>F. Giubilei | Photography</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
