--- a/thank-you.html
+++ b/thank-you.html
@@ -11,7 +11,7 @@
         content="Photgrapher, photography, videographer, videography, concerts, wedding, photoshoots, urban, São Paulo, Belo Horizonte, Brazil">
     <meta http-equiv="refresh" content="10; url=index.html">
     <!-- Title -->
-    <title>F. Giubilei | Photographer + Videographer</title>
+    <title>F. Giubilei | Photography</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
